<resources>
    <string name="app_name">Xtwh</string>
    <string name="demo">Demo</string>
    <string name="account_id">账号id</string>
    <string name="msg_account">账号信息</string>
    <string name="exit_account">退出当前账号</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_input_useid">请输入账号</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="login">登录</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="un_login">用户未登录</string>
    <string name="register">注册</string>
</resources>
